# lottery-539

./: .gitignore  README.md  cli.py  pyproject.toml
analyzer/: analyzer.py
data/: db.py
scraper/: scraper.py
tests/: test_analyzer.py  test_cli.py  test_dataset.py  test_db.py  test_model.py  test_predict.py  test_scraper.py  test_train.py
tests/fixtures/: sample_response.json
